@@ -170,7 +170,7 @@ $messages = array(
 'protect'           => 'Protexer',
 'protect_change'    => 'mudar protección',
 'protectthispage'   => 'Protexer esta páxina',
-'unprotect'         => 'desprotexer',
+'unprotect'         => 'Desprotexer',
 'unprotectthispage' => 'Desprotexer esta páxina',
 'newpage'           => 'Páxina nova',
 'talkpage'          => 'Discutir sobre esta páxina',
