@@ -269,7 +269,7 @@ $messages = array(
 'undelete_short'    => 'Attopprett $1 endringar',
 'protect'           => 'Vern',
 'protectthispage'   => 'Vern denne sida',
-'unprotect'         => 'fjern vern',
+'unprotect'         => 'Fjern vern',
 'unprotectthispage' => 'Fjern vern av denne sida',
 'newpage'           => 'Ny side',
 'talkpage'          => 'Drøft sida',
