@@ -194,7 +194,7 @@ dj'artìcol ancó pa scrit",
 'protect'           => 'Protegg',
 'protect_change'    => 'modìfica protession',
 'protectthispage'   => 'Protegg sta pàgina-sì',
-'unprotect'         => 'gava la protession',
+'unprotect'         => 'Gava la protession',
 'unprotectthispage' => 'Gava via la protession',
 'newpage'           => 'Pàgina neuva',
 'talkpage'          => 'Discussion',
