@@ -168,7 +168,7 @@ $messages = array(
 'protect'           => 'Уларыппат гын',
 'protect_change'    => 'Көмүскэл таһымын уларыт',
 'protectthispage'   => 'Бу сирэйи уларыппат гын',
-'unprotect'         => 'уларытары көҥүллээ',
+'unprotect'         => 'Уларытары көҥүллээ',
 'unprotectthispage' => 'Бу сирэйи уларытары көҥүллээ',
 'newpage'           => 'Саҥа сирэй',
 'talkpage'          => 'Бу сирэйи ырыт',
